ALS-3852: Limit values returned in TopmedVariable (#11)
* ALS-3852: Add search parameter to prevent variable values from being returned

* ALS-3852: Remove values from metadata in TopmedVariable, add parameter to limit values returned

* ALS-3852: Cleanup variable limit code and TopmedVariable collections

* ALS-3852: Remove unnecessary fields from JSON serialization

* ALS-3892: Add tests, refactor some collection types

* ALS-3852: Update stopwords

* Add nsrr to dictionary control file